# patternize

./: Cargo.toml  LICENSE-Apache  LICENSE-MIT  README.md
patternize_internals/: Cargo.toml
patternize_internals/src/: builder.rs  lib.rs  singleton.rs
patternize_macros/: Cargo.toml
patternize_macros/src/: lib.rs
src/: lib.rs
tests/: builder.rs  singleton.rs
