[package]
name = "patternize_internals"
description = "Internals of patternize"
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
patternize = { version = "0", path = "../" }
