[package]
name = "patternize_macros"
description = "Macros of patternize"
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
patternize_internals = { version = "0", path = "../patternize_internals" }
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
patternize = { version = "0", path = "../" }
